Remove useCase and defaultParams field in WorkflowRequest (#952)
* Remove useCase and defaultParams field in WorkflowRequest

Signed-off-by: Junwei Dai <junweid@amazon.com>

* Remove useCase and defaultParams field in WorkflowRequest

Signed-off-by: Junwei Dai <junweid@amazon.com>

* Removed the constructor that has never been used and tested.

Signed-off-by: Junwei Dai <junweid@amazon.com>

---------

Signed-off-by: Junwei Dai <junweid@amazon.com>
Co-authored-by: Junwei Dai <junweid@amazon.com>